--- a/app/Resources/views/site/produtos/index.html.twig
+++ b/app/Resources/views/site/produtos/index.html.twig
@@ -2,10 +2,204 @@
 
 {% block main_container %}
 
-    <div class="page_title3">
+    <div class="page_title2">
         <div class="container">
-            <div class="title"><h1>PRODUTOS</h1></div>
+            <div class="title"><h1>PRODUTOS</h1><br></div>
         </div>
     </div><!-- end page title -->
+
+    <div class="clearfix"></div>
+
+    <div class="content_fullwidth lessmar">
+        <div class="container">
+
+            <div class="one_half">
+
+                <div class="alileft"><h3>PAF-RC</h3></div>
+
+                <p>O PAF-RC foi desenvolvido com o intuito de fornecer informações gerenciais rápidas e confiáveis para
+                    auxiliar a gestão empresarial dos mais diversos segmentos de mercado. Proporcionando agilidade aos
+                    processos administrativos, financeiros, vendas e suprimentos, integrando as diversas áreas da
+                    empresa,
+                    disponibilizamos informações confiáveis de forma rápida e simples. Atende as obrigações fiscais
+                    vigentes
+                    e á atualizado constantemente de acordo com as novas exigências do governo.</p>
+
+                <br>
+                <div class="alileft"><h5>Automação Comercial</h5></div>
+
+                <p>O PAF-RC é uma ferramenta que proporciona maior competividade, eficiência e otimização dos processos
+                    fiscais e de gerenciamento deixando a sua empresa mais eficiente e pronta para o mercado.</p>
+
+            </div>
+            <div class="one_half last">
+                <img src="{{ asset('site/assets/images/desktop.png') }}" alt="" class="img_left" draggable="false">
+            </div>
+
+        </div>
+
+        <div class="content_fullwidth lessmar">
+            <div class="container">
+                <div class="alileft"><h5>Personalização</h5></div>
+
+                <p>Interface amigável e usual, aderente às necessidades da organização. Com treinamento aos setores que
+                    utilizarão o PAF-RC e atendimento exclusivo para cada caso.
+                    Todo sistema é adaptado a sua empresa, seguindo parâmetros da legislação, e pronto para atender às
+                    exigências do mercado de trabalho. Com isso há um melhor gerenciamento de tempo ganhando agilidade
+                    nos
+                    processos e disponibilidade de informações gerenciais para uma melhor tomada de decisão.
+                </p>
+            </div>
+        </div>
+
+        <div class="clearfix margin_top5"></div>
+
+        <div class="container">
+            <div class="content_fullwidth">
+
+                <div class="one_half">
+                    <img src="{{ asset('site/assets/images/desktop.png') }}" alt="" class="img_left" draggable="false">
+                </div>
+
+                <div class="one_half last">
+                    <div class="framed-box">
+                        <div class="framed-box-wrap">
+                            <div class="pricing-title">
+                                <h4 class="nocaps">Faturamento | Estoque</h4>
+                            </div>
+                            <div class="pricing-text-list">
+                                <ul class="list1">
+                                    <li><i class="fa fa-chevron-right"></i> Entrada de Mercadorias</li>
+                                    <li><i class="fa fa-chevron-right"></i> Registro de Pré-Venda</li>
+                                    <li><i class="fa fa-chevron-right"></i> Ordem de Produção / Compra</li>
+                                    <li><i class="fa fa-chevron-right"></i> Produtos mais vendidos / Curva ABS</li>
+                                    <li><i class="fa fa-chevron-right"></i> Saldo de Produtos / Tabelas</li>
+                                    <li><i class="fa fa-chevron-right"></i> Faturamento Real / Contábil</li>
+                                    <li><i class="fa fa-chevron-right"></i> Registro de Inventário</li>
+                                    <li><i class="fa fa-chevron-right"></i> Formulações / Kits</li>
+                                    <li><i class="fa fa-chevron-right"></i> Etiquetas com Código de Barras</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="clearfix margin_top5"></div>
+
+        <div class="container">
+            <div class="content_fullwidth">
+
+                <div class="one_third">
+                    <div class="framed-box">
+                        <div class="framed-box-wrap">
+                            <div class="pricing-title">
+                                <h4 class="nocaps">Financeiro</h4>
+                            </div>
+                            <div class="pricing-text-list">
+                                <ul class="list1">
+                                    <li><i class="fa fa-chevron-right"></i> Contas a Pagar / Pagas</li>
+                                    <li><i class="fa fa-chevron-right"></i> Contas a Receber / Recebidas</li>
+                                    <li><i class="fa fa-chevron-right"></i> Comissão</li>
+                                    <li><i class="fa fa-chevron-right"></i> Contas de Caixa ADM e Bancárias</li>
+                                    <li><i class="fa fa-chevron-right"></i> Transferências</li>
+                                    <li><i class="fa fa-chevron-right"></i> Cheques Compensados, Devolvidos ou
+                                        Repassados
+                                    </li>
+                                    <li><i class="fa fa-chevron-right"></i> Históricos de Caixa ADM e Bancários</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="one_third">
+                    <div class="framed-box">
+                        <div class="framed-box-wrap">
+                            <div class="pricing-title">
+                                <h4 class="nocaps">Fechamentos Mensais</h4>
+                            </div>
+                            <div class="pricing-text-list">
+                                <ul class="list1">
+                                    <li><i class="fa fa-chevron-right"></i> Sintegra</li>
+                                    <li><i class="fa fa-chevron-right"></i> Sped Fiscal</li>
+                                    <li><i class="fa fa-chevron-right"></i> Sped Pis Cofins</li>
+                                    <li><i class="fa fa-chevron-right"></i> Registro de Entrada e Saída</li>
+                                    <li><i class="fa fa-chevron-right"></i> Resgistros por CFOPs</li>
+                                    <li><i class="fa fa-chevron-right"></i> Movimento por ECF</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="one_third last">
+                    <div class="framed-box">
+                        <div class="framed-box-wrap">
+                            <div class="pricing-title">
+                                <h4 class="nocaps">Cupom, Nota Fiscal...</h4>
+                            </div>
+                            <div class="pricing-text-list">
+                                <ul class="list1">
+                                    <li><i class="fa fa-chevron-right"></i> Compatível com qualquer certificado Digital
+                                    </li>
+                                    <li><i class="fa fa-chevron-right"></i> Rápida emissão</li>
+                                    <li><i class="fa fa-chevron-right"></i> Segurança nos dados</li>
+                                    <li><i class="fa fa-chevron-right"></i> E-mail Automático</li>
+                                    <li><i class="fa fa-chevron-right"></i> Carta de Correção / Cancelamento /
+                                        Inutilização
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="content_fullwidth">
+
+                <div class="one_half">
+                    <div class="framed-box">
+                        <div class="framed-box-wrap">
+                            <div class="pricing-title">
+                                <h4 class="nocaps">Diferenciais</h4>
+                            </div>
+                            <div class="pricing-text-list">
+                                <ul class="list1">
+                                    <li><i class="fa fa-chevron-right"></i> Importação do XML na Entrada da NF</li>
+                                    <li><i class="fa fa-chevron-right"></i> Cadastro automático de Fornecedores</li>
+                                    <li><i class="fa fa-chevron-right"></i> Verificação automática dos Produtos</li>
+                                    <li><i class="fa fa-chevron-right"></i> Lançamento automático de totais e impostos
+                                    </li>
+                                    <li><i class="fa fa-chevron-right"></i> Backup nos nossos servidores na nuvem</li>
+                                    <li><i class="fa fa-chevron-right"></i> Interface simples e de fácil entendimento
+                                    </li>
+                                    <li><i class="fa fa-chevron-right"></i> Relatórios diferenciados</li>
+                                    <li><i class="fa fa-chevron-right"></i> Atende 100% às exigências da SEFAZ</li>
+                                    <li><i class="fa fa-chevron-right"></i> Controle por senhas dos usuários</li>
+                                    <li><i class="fa fa-chevron-right"></i> Totalmente parametrizável</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="one_half last">
+                    <img src="{{ asset('site/assets/images/desktop.png') }}" alt="" class="img_left" draggable="false">
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="clearfix margin_top5"></div>
 
 {% endblock %}
