--- a/app/Resources/views/site/produtos/index.html.twig
+++ b/app/Resources/views/site/produtos/index.html.twig
@@ -130,6 +130,8 @@
                                     <li><i class="fa fa-chevron-right"></i> Registro de Entrada e Saída</li>
                                     <li><i class="fa fa-chevron-right"></i> Resgistros por CFOPs</li>
                                     <li><i class="fa fa-chevron-right"></i> Movimento por ECF</li>
+                                    <li>&nbsp;</li>
+                                    <li>&nbsp;</li>
                                 </ul>
                             </div>
                         </div>
@@ -152,6 +154,8 @@
                                     <li><i class="fa fa-chevron-right"></i> Carta de Correção / Cancelamento /
                                         Inutilização
                                     </li>
+                                    <li>&nbsp;</li>
+                                    <li>&nbsp;</li>
                                 </ul>
                             </div>
                         </div>
@@ -201,5 +205,85 @@
     </div>
 
     <div class="clearfix margin_top5"></div>
+
+    <div class="feature_section19">
+        <div class="container">
+
+            <h1>
+                O Que Nossos Clientes Dizem
+                <b>Confira alguns testemunhos sobre a nossa solução</b>
+            </h1>
+            <br/><br/>
+            <div class="clearfix"></div>
+
+            <div>
+                <div class="slider nosidearrows">
+                    <div class="flexslider carousel">
+                        <ul class="slides">
+
+                            <li>
+
+                                <div class="one_half">
+                                    <div class="pesbox">
+                                        There are many variations of passages of lorem Ipsum available but the majority
+                                        suffered alteration in some form by injected as they humo aren rando smised you
+                                        need to be long establishe reader as will be distracte Ipsum which look
+                                        reasonable is always sheets containin sum passages more recently with desktop
+                                        publishin software like.
+                                    </div>
+                                    <div class="pesimg"> &nbsp; <strong>- Marison Avasty</strong> &nbsp;<i>custmer</i>
+                                        <img src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                </div>
+
+                                <div class="one_half last">
+                                    <div class="pesbox">
+                                        There are many variations of passages of lorem Ipsum available but the majority
+                                        suffered alteration in some form by injected as they humo aren rando smised you
+                                        need to be long establishe reader as will be distracte Ipsum which look
+                                        reasonable is always sheets containin sum passages more recently with desktop
+                                        publishin software like.
+                                    </div>
+                                    <div class="pesimg"> &nbsp; <strong>- Jacob Alexander</strong> &nbsp;<i>custmer</i>
+                                        <img src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                </div>
+
+                            </li><!-- end section -->
+
+                            <li>
+
+                                <div class="one_half">
+                                    <div class="pesbox">
+                                        There are many variations of passages of lorem Ipsum available but the majority
+                                        suffered alteration in some form by injected as they humo aren rando smised you
+                                        need to be long establishe reader as will be distracte Ipsum which look
+                                        reasonable is always sheets containin sum passages more recently with desktop
+                                        publishin software like.
+                                    </div>
+                                    <div class="pesimg"> &nbsp; <strong>- Darlene Aja</strong> &nbsp;<i>custmer</i> <img
+                                                src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                </div>
+
+                                <div class="one_half last">
+                                    <div class="pesbox">
+                                        There are many variations of passages of lorem Ipsum available but the majority
+                                        suffered alteration in some form by injected as they humo aren rando smised you
+                                        need to be long establishe reader as will be distracte Ipsum which look
+                                        reasonable is always sheets containin sum passages more recently with desktop
+                                        publishin software like.
+                                    </div>
+                                    <div class="pesimg"> &nbsp; <strong>- Glen Lincoln</strong> &nbsp;<i>custmer</i>
+                                        <img src="{{ asset('site/assets/images/people-img2.jpg') }}" alt=""/></div>
+                                </div>
+
+                            </li><!-- end section -->
+
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
 
 {% endblock %}
