titulos das pagina sem caixa alta

--- a/app/Resources/views/site/produtos/index.html.twig
+++ b/app/Resources/views/site/produtos/index.html.twig
@@ -4,7 +4,7 @@
 
     <div class="page_title2">
         <div class="container">
-            <div class="title"><h1>PRODUTOS</h1><br></div>
+            <div class="title"><h1>Produtos</h1><br></div>
         </div>
     </div><!-- end page title -->
 
