--- a/app/Resources/views/site/sobre/index.html.twig
+++ b/app/Resources/views/site/sobre/index.html.twig
@@ -3,7 +3,7 @@
 {% block main_container %}
     <div class="page_title2">
         <div class="container">
-            <div class="title"><h1>SOBRE</h1><br></div>
+            <div class="title"><h1>Sobre</h1><br></div>
         </div>
     </div><!-- end page title -->
 
