--- a/app/Resources/views/site/_partials/_header.html.twig
+++ b/app/Resources/views/site/_partials/_header.html.twig
@@ -60,7 +60,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="{{ path('site_produtos') }}"
+                                        <a href="{{ path('site_produtos2') }}"
                                            class="{% if app.request.attributes.get('_route') == 'site_produtos' %}active{% endif %}">
                                             Produtos
                                         </a>
