--- a/app/Resources/views/admin/bill/index.html.twig
+++ b/app/Resources/views/admin/bill/index.html.twig
@@ -1,5 +1,16 @@
 {% extends 'admin/base.html.twig' %}
 
+{% block stylesheets %}
+    {% embed 'admin/_partials/_block_stylesheets.html.twig' %}
+
+        {% block page_level_plugins %}
+            <link rel="stylesheet"
+                  href="{{ asset('bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css') }}">
+        {% endblock %}
+
+    {% endembed %}
+{% endblock %}
+
 {% block page_content %}
 
     {% embed 'admin/_partials/_default_table_list.html.twig' %}
