--- a/app/Resources/views/admin/_partials/_block_javascripts.html.twig
+++ b/app/Resources/views/admin/_partials/_block_javascripts.html.twig
@@ -33,5 +33,5 @@
         type="text/javascript"></script>
 <!-- END THEME LAYOUT SCRIPTS -->
 
-<script src="{{ asset('admin/assets/global/scripts/custom.js') }}"
-        type="text/javascript"></script>
+<script src="{{ asset('admin/assets/global/scripts/custom.js') }}" type="text/javascript"></script>
+<script src="{{ asset('admin/assets/global/scripts/fields_format.js') }}" type="text/javascript"></script>
